# ya-runtime-emscripten

./: Cargo.toml  ya-runtime-emscripten.json
src/: main.rs
ya-emscripten-meta/: Cargo.toml
