[package]
name = "ya-runtime-emscripten"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=['ya-emscripten-meta']

[dependencies]
structopt = "0.3.1"
serde_json="1.0.40"
anyhow = "1.0"
zip="0.5.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
ya-emscripten-meta={ path="./ya-emscripten-meta" }


[dependencies.serde]
version = "1.0.99"
features=['derive']

[dependencies.sp-wasm-engine]
git="https://github.com/golemfactory/sp-wasm.git"
branch="wasm-runner"

[package.metadata.deb]
#depends = "$auto, ya-exeunit"
assets = [
    ["target/release/ya-runtime-emscripten", "usr/lib/yagna/plugins/", "755"],
    ["ya-runtime-emscripten.json", "usr/lib/yagna/plugins/", "644"],
]

